# macos-tools

./: .gitignore  LICENSE  README.md  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py
.github/workflows/: build.yml  publish.yml
Formula/: macos-tools.rb
homebrew-tap/: .gitattributes  README.md
homebrew-tap/Formula/: macos-tools.rb
macos_tools/: cli.py
macos_tools.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
macos_tools/commands/: brew.py  docker.py  ports.py  system.py  xcode.py
macos_tools/utils/: formatting.py
scripts/: format_code.py  update_homebrew_formula.rb
src/: __init__.py  cli.py
src/commands/: __init__.py  brew.py  docker.py  network.py  ports.py  system.py  xcode.py
src/utils/: formatting.py
tests/: test_brew.py  test_cli.py  test_docker.py  test_network.py  test_ports.py  test_system.py  test_xcode.py
