[metadata]
description-file = README.md

[tool:pytest]
testpaths = tests
python_files = test_*.py
addopts = -v

[flake8]
max-line-length = 127
exclude = .git,__pycache__,build,dist
max-complexity = 10

[coverage:run]
source = src
omit = 
    src/__init__.py
    src/commands/__init__.py

[coverage:report]
fail_under = 0
show_missing = True
skip_covered = True

[coverage:html]
directory = htmlcov
